# hpg

./: Cargo.toml  Cross.toml  Makefile  README.md
.cargo/: config.toml
cross/: Dockerfile.armv7  Makefile
docs/: reference.md
hpg/: Cargo.toml
hpg-remote/: Cargo.toml
hpg-remote/remotetest/: .hpgignore  hpg.lua  inventory.yaml  vars.json
hpg-remote/src/: config.rs  error.rs  local.rs  main.rs  remote.rs  ssh.rs  transport.rs  types.rs
hpg/src/: error.rs  hpgdefs.lua  macros.rs  main.rs  tracker.rs
hpg/src/actions/: access.rs  mod.rs  process.rs
hpg/src/modules/: machine.rs  pkg.rs
hpg/src/remote/: comms.rs  config.rs  messages.rs  mod.rs  server.rs  ssh.rs
hpg/src/task/: mod.rs  vars.rs
hpg/src/tracker/: local.rs  mod.rs  remote.rs
src/: error.rs  hash.rs  hpgdefs.lua  lua.rs  macros.rs  main.rs  output.rs  tasks.rs  tracker.rs
src/actions/: access.rs  copy.rs  file.rs  mod.rs  process.rs  util.rs
src/modules/: access.rs  archive.rs  file.rs  installer.rs  machine.rs  mod.rs  net.rs  pkg.rs
src/modules/packaging/: apt.rs  arch.rs  mod.rs
src/modules/services/: mod.rs  systemd.rs
src/remote/: client.rs  codec.rs  comms.rs  config.rs  messages.rs  mod.rs  server.rs  ssh.rs
src/task/: graph.rs  mod.rs  registry.rs  vars.rs
src/tracker/: local.rs  mod.rs  remote.rs
testfiles/: homedir.lua  hpg.lua  meta.json  newtask.lua  process.lua
