[package]
name = "hpg"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
flate2 = "1.1.2"
lazy_static = "1.5.0"
nix = { version = "0.30.1", features = ["user", "fs"] }
petgraph = "0.8.2"
reqwest = { version = "0.12.22", features = [
    "rustls-tls",
    "blocking",
    "json",
], default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
tar = "0.4.44"
tempfile = "3.20.0"
tera = "1.20.0"
thiserror = "2.0.12"
regex = "1.11.1"
url = "2.5.4"
zbus = "5.8.0"
zip = "4.3.0"
mlua = { version = "0.10.5", features = [
    "lua54",
    "vendored",
    "macros",
    "anyhow",
] }
tokio = { version = "1.46.1", features = ["full"] }
indicatif = { version = "0.18.0", features = ["improved_unicode"] }
console = "0.16.0"
clap = { version = "4.5.41", features = ["derive"] }
ignore = "0.4.23"
russh = { version = "0.53.0" }
russh-keys = { version = "0.49.2" }
russh-config = "0.50.0"
ciborium = "0.2.2"
pathdiff = "0.2.3"
tokio-util = { version = "0.7.15", features = ["codec"] }
futures-util = "0.3.31"
async-trait = "0.1.88"
dirs-next = "2.0.0"
pin-project = "1.1.10"
bytes = "1.10.1"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
rustix = "1.0.7" # Added for dependabot
fast_rsync = "0.2.0"
toml = "0.9.1"
