[package]
name = "hpg-remote"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
tokio = { version = "1.32.0", features = ["full"] }
indicatif = { version = "0.17.7", features = ["improved_unicode"] }
console = "0.15.7"
thiserror = "1.0.38"
russh = { version = "0.40.0" }
russh-config = "0.7.0"
async-trait = "0.1.74"
russh-keys = { version = "0.40.0" }
dirs-next = "2.0.0"
ignore = "0.4.21"
pathdiff = "0.2.1"
serde = { version = "1.0.193", features = ["derive"] }
ciborium = "0.2.1"
pin-project = "1.1.3"
librsync = "0.2.3"
tokio-util = { version = "0.7.10", features = ["codec"] }
futures-util = "0.3.29"
clap = { version = "4.4.11", features = ["derive"] }
shell-escape = "0.1.5"
serde_yaml = "0.9.27"
deser-hjson = "2.2.4"
