[package]
name = "hpg"
version = "0.2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
flate2 = "1.0.25"
lazy_static = "1.4.0"
nix = "0.26.2"
petgraph = "0.6.2"
reqwest = { version = "0.11.14", features = ["rustls-tls", "blocking", "json"], default-features = false }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
sha2 = "0.10.6"
tar = "0.4.38"
tempfile = "3.3.0"
tera = "1.17.1"
thiserror = "1.0.38"
thread_local = "1.1.4"
regex = "1.7.1"
url = "2.3.1"
zbus = "3.7.0"
zip = "0.6.3"
mlua = { version = "0.9.1", features = ["lua54", "mlua_derive", "vendored", "macros"] }
tokio = { version = "1.32.0", features = ["full"] }
indicatif = { version = "0.17.7", features = ["improved_unicode"] }
console = "0.15.7"
clap = { version = "4.4.11", features = ["derive"] }
